--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "react": "^16.8.2",
-    "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
   },
@@ -28,14 +27,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "cssnano": "^4.1.10",
-    "cssnano-preset-advanced": "^4.0.7",
-    "postcss-aspect-ratio-mini": "^1.0.1",
-    "postcss-preset-env": "^6.5.0",
-    "postcss-px-to-viewport": "^1.1.0",
-    "postcss-viewport-units": "^0.1.6",
-    "postcss-write-svg": "^3.0.1",
-    "react-app-rewire-postcss": "^3.0.2"
-  }
+  "devDependencies": {}
 }
