--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "react": "^16.8.2",
+    "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5"
@@ -30,6 +31,12 @@
   ],
   "devDependencies": {
     "css-loader": "^2.1.0",
+    "postcss-pxtorem": "^4.0.1",
     "style-loader": "^0.23.1"
+  },
+  "theme": {
+    "hd": "2px",
+    "brand-primary": "red",
+    "color-text-base": "#333"
   }
 }
