--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd-mobile": "^2.2.8",
+    "antd-mobile-demo-data": "^0.2.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.11",
     "echarts": "^4.1.0",
