--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "antd-mobile": "^2.2.8",
     "antd-mobile-demo-data": "^0.2.0",
+    "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
     "customize-cra": "^0.2.11",
     "echarts": "^4.1.0",
+    "immutable": "^4.0.0-rc.12",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "rc-form": "^2.4.2",
@@ -15,8 +17,12 @@
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
