--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.10.2",
     "antd-mobile": "^2.2.8",
     "antd-mobile-demo-data": "^0.2.0",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "bizcharts": "^3.4.3",
     "customize-cra": "^0.2.11",
     "echarts": "^4.1.0",
     "immutable": "^4.0.0-rc.12",
@@ -17,6 +19,7 @@
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
+    "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
