--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "immutable": "^4.0.0-rc.12",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "moment": "^2.24.0",
     "rc-form": "^2.4.2",
     "react": "^16.8.2",
     "react-app-rewire-postcss": "^3.0.2",
@@ -23,6 +24,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
+    "react-zmage": "^0.6.11",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0"
