--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "react-zmage": "^0.6.11",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
