--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-app-rewire-postcss": "^3.0.2",
     "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.2",
+    "react-imageslides": "^1.2.6",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
