--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "react-transition-group": "^2.8.0",
     "react-zmage": "^0.6.11",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
