--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "rc-form": "^2.4.2",
     "react": "^16.8.2",
     "react-app-rewire-postcss": "^3.0.2",
